@startuml
  skinparam classAttributeIconSize 0

class AppCompatActivity <<Control/Boundary>> {
  +super()
}

abstract class BaseActivity <<Control/Boundary>> {
  #ExpBookActivityResult<Intent, ActivityResult>
  {static}+ ARG_DETAILED_EXPENSE : String = "entry" {readOnly};
  {static}+ ARG_RETURNED_EXPENSE : String = "entry2" {readOnly};
  {static}+ ARG_EXPENSE_LIST_COMMAND : String = "expense_command"{readOnly};
  {static}+ LIFE_CODE : byte = 1 {readOnly};
  {static}+ DEAD_CODE : byte = -1 {readOnly};

  +super()
  {static}+ bundleExpense(expense : Expense, key : String) : Bundle
  {static}+ extractExpense(intent : Intent, key : String) : Expense
  {static}+ extractExpense(bundle : Bundle, key : String) : Expense
  {static}+ isBlank(et : EditText) : boolean
  {static}+ checkFields(nameEt : EditText, monthStartedEt : EditText, monthlyChargeEt : EditText) : boolean
  #displayFragment(entry : Expense, operationMode : EditEntryFragment.OpMode, tag : String) : void
  #displayFragment(operationMode : EditEntryFragment.OpMode, tag : String) : void
  -startFragmentTransaction(fragment : DialogFragment, tag : String) : void
}

class DialogFragment <<Boundary>> {
  +super()
}

abstract class SubActivity <<Control/Boundary>> {
  +returnToMain(view : View) : void
  #returnResultToMain(bundle : Bundle) : void
  +super()
}

class ExpenseListAdapter <<Control>>{
  - context : Context
  - entries : ExpenseList
  - inflater : LayoutInflater
  + getView(position : int, convertView : View, parent : ViewGroup) : View
  + getCount() : int
  + getItem(position : int) : Object
  + remove(index : int) : void
  + add(newEntry : Expense) : void
  + set(index : int, editedEntry : Expense) : void
}

class MainActivity <<Control/Boundary>> {
  - entries : ExpenseList
  - expenseListView : ListView
  - expenseAdapter : ExpenseListAdapter
  - deleteMode : boolean
  + super()
  + openNewEntry(view : View) : void
  - openEntryDetailsForResult(index : int) : void
  - toggleDeleteMode() : void
  - activateDeleteMode() : void
  - deactivateDeleteMode() : void
  - setDefaultModeUI() : void
  - setDeleteModeUI() : void
  - setupFragmentResultListener() : void
}

class DetailedExpenseActivity <<Control/Boundary>> {
  - theExpense : Expense
  - monthlyChargeDtv : TextView
  - monthStartedDtv : TextView
  - nameDtv : TextView
  - commentDtv : TextView
  + super()
  - setupFragmentResultListener() : void
  - deleteExpense() : void
  - setDetailedTextViews() : void
  - setCommentDetailedTextView(comment : String) : void
  + returnToMain(view : View) : void
}

enum OpMode {
  EDIT
  ADD
}
enum EEFOptions {
  SOME
  NONE
}

class EditEntryFragment <<Boundary>> {
  {static}- ARG_EXPENSE {readOnly} : String
  {static}- ARG_OP_MODE {readOnly} : String
  {static}- ARG_EXISTANCE_CHECK {readOnly} : String
  - operationMode : OpMode
  + super()
  - applyFilters() : void
  - checkFields() : boolean
  - acceptUserInput() : Expense
  - sendResult(expense : Expense) : void
}

class Expense <<Entity>> {
  - name : String // 15 characters
  - date : int[]
  - monthlyCharge : float
  - commentFlag : boolean
  - comment : String // 20 characters and optional

  +getName() : String
  +getComment() : String
  +getCommentFlag() : boolean
  +getMonthStarted() : String
  +getMonthlyCharge() : String
  +getMonthlyChargeNice() : String
  +getMonthlyChargeFloat() : float
  +setMonthlyCharge(monthlyCharge : String) : void
  +setMonthStarted(monthStarted : String) : void
  {static}+monthStartedCheck(monthStarted : String) : boolean
  {static}+monthlyChargeCheck(monthlyCharge : String) : boolean
  {static}+commentCheck(comment : String) : boolean
}

class ExpenseList <<Control>> {
  -expenses : ArrayList<Expense>
  +add(expense : Expense) : void
  +editExpense(index : int, newValues : Expense) : void
  +viewExpense(index : int) : void
  +remove(index : int) : void
  +get(index : int) : Expense
  +getName(index : int) : String
  +getMonthlyChargeNice(index : int) : String
  +getMonthStarted(index : int) : String
  +getComment(index : int) : String
  +getSum() : String
  +size() : int
  +set(index : int, newExpense : Expense) : void
}

note bottom of ExpenseList
  This is the class representing the data structure that holds all the expenses
  listing. Has methods that lets the programs add, edit, and delete entries.
end note

note bottom of Expense
  Current design is that when a change to an expense has been initiated by the
  user, a new expense is created and the old one is left behind to be handled
  by the garbage collector. This will ensure that we don't have to chage the
  state of the expense object and treat it like an atomic data type. Here are
  the constraints.

  - name : limit 15 chars
  - date : not future dates, following yyyy-mm format and only valid characters
  will pass.
  - monthlyCharge : a valid money value. Cannot be negative in our case
  - comment : may or may not exists, and has a limit of 20 characters
end note

note bottom of MainActivity
  This is the MainActivity class in Android studio. This is effectively the
  entrance program. This means that when you launch up the application, this
  is the first class that the program effectively enters. It handles both the
  user interface, but more importantly, it does the flow control logic of the
  app. This activity can launch the edit entry fragment in ADD mode, which will
  let user make a new entry. It will also launch the detailed activity view when
  the user selects an item in the list. This view shows the details of the
  activity.
end note

note bottom of DetailedExpenseActivity
  The detailed expense activity displays the details of a selected expense.
  Like the main activity, it will also launch the edit entry fragment, but in
  EDIT mode, where users can change the entry details.
end note

note bottom of ExpenseListAdapter
  This is the adapter for the ExpenseList class. It is responsible for
  interpreting the ExpenseList object and then displaying it on the list view.
  It also has some ExpenseList modification method for cleaner list updates.
end note

note bottom of EditEntryFragment
  This is the fragment class that will take user input. It has two modes of
  operations. One is the ADD and the other is EDIT, which corresponds with the
  activity in which the fragment is activated in. The main underlying function
  of this method is to take user input and pass it into the activity that called
  it.
end note

note bottom of BaseActivity
  The class holds methods and functions that all other activities in this
  project requires. This mostly include expense wrapping and unwrapping for
  passing around to other activities. It also does some method handling for
  waiting for activity result after starting an activity.
end note

/' This is the classes that inherit from AppCompatActivity, which is all the
activities '/
AppCompatActivity <|-- BaseActivity

/' Now a lot of things are subclasses of BaseActivity so that we could send
objects around '/
BaseActivity <|-- MainActivity
BaseActivity <|-- SubActivity

/' The classes that extends SubActivity '/
SubActivity <|-- DetailedExpenseActivity

/' The class that inherits from Fragment '/
DialogFragment <|-- EditEntryFragment

EditEntryFragment *-- "1" OpMode

/' This is the relationship for the MainActivity '/
MainActivity *-- "1" ExpenseListAdapter

/' For relationships between the activities '/
MainActivity -- DetailedExpenseActivity : "Shows detail of an expense entry"
DetailedExpenseActivity -- EditEntryFragment : "Opens fragment when editing"
MainActivity -- EditEntryFragment : "Opens fragment when adding"

ExpenseList *-- "0..*" Expense
ExpenseList "1" --* ExpenseListAdapter

@enduml
